--- a/cloudinterface/src/main/resources/templates/home.html
+++ b/cloudinterface/src/main/resources/templates/home.html
@@ -324,10 +324,13 @@
                                     <div class="modal-body">
                                         <form th:object="${newPet}" th:action="@{/pet/addPet}" action="#" method="POST">
                                             <input type="hidden" name="petId" id="pet-id">
-                                            <div class="form-group">
-                                                <label for="pet-type" class="col-form-label">Type</label>
-                                               <input th:field="*{petType}" type="text" name="petType" class="form-control" id="pet-type" maxlength="20" required>
-                                            </div>
+											<div class="form-group blu-margin">
+												<label for="pet-type" class="col-form-label">Pet type</label>
+												<select class="form-control" th:field="*{petType}"  id="pey-type">
+												<option value="0" selected>Select type</option>
+												<option th:each="petType : ${petTypes}" th:value="${petType}" th:text="${petType}"></option>
+												</select>
+											</div>
                                             <div class="form-group">
                                                 <label for="pet-name" class="col-form-label">Name</label>
                                                 <textarea th:field="*{petName}" name="petName" id="pet-name" rows="5" maxlength="1000" required></textarea>
