--- a/cloudinterface/src/main/resources/templates/home.html
+++ b/cloudinterface/src/main/resources/templates/home.html
@@ -266,14 +266,17 @@
 							<button id="showOwnerForm" style="margin: 0.25em;" type="button" class="btn btn-info float-left" onclick="showOwnerModal()">
 								+ Add a New Owner
 							</button>
-							<button id="showEmployeeForm" style="margin: 0.25em;" type="button" class="btn btn-info float-left" onclick="showEmployeeModal()">
-								+ Add a New Employee
-							</button>
 							<button id="showPetForm" style="margin: 0.25em;" type="button" class="btn btn-info float-left" onclick="showPetModal()">
 								+ Add a New Pet
 							</button>
-							<button id="showScheduleForm" style="margin: 0.25em;" type="button" class="btn btn-info float-left" onclick="showScheduleModal()">
-								+ Create Schedule
+							<button id="showEmployeeForm" style="margin: 0.25em;" type="button" class="btn btn-info float-left" onclick="showEmployeeModal()">
+								+ Add a New Employee
+							</button>
+							<button id="showEmployeeScheduleForm" style="margin: 0.25em;" type="button" class="btn btn-info float-left" onclick="showEmployeeScheduleModal()">
+								+ Add Employee schedule
+							</button>
+							<button id="showPetScheduleForm" style="margin: 0.25em;" type="button" class="btn btn-info float-left" onclick="showPetScheduleModal()">
+								+ Add Pet Schedule
 							</button>
 						</div>
                         <div class="table-responsive">
@@ -472,7 +475,43 @@
                                 </div>
                             </div>
                         </div>
-					</div>
+                        <div class="modal fade" id="employeeScheduleModal" tabindex="-1" role="dialog" aria-labelledby="employeeScheduleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="employeeSheduleModalLabel">Employee schedule</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form  th:object="${newEmployee}" th:action="@{/pet/addEmployeeSchedule}" action="#" method="POST">
+                                            <div class="form-group">
+												<label  for="employee-scheule" class="col-form-label">Days (multiple choice)</label>
+												<select class="form-control" th:field="*{employeeSchedule}" multiple="multiple">
+													<option th:each="day : ${days}"
+															th:value="${day}"
+															th:text="${day}">Day name</option>
+												</select>
+											</div>
+											<div class="form-group blu-margin">
+												<label for="employee-name"class="col-form-label">Owner</label>
+												<select class="form-control" th:field="*{employeeId}">
+												<option value="0" selected>Select employee</option>
+												<option th:each="employee : ${employees}" th:value="${employee.employeeId}" th:text="${employee.employeeId} + ', ' +  ${employee.employeeName}"></option>
+												</select>
+											</div>
+                                            <button id="scheduleSubmit" type="submit" class="d-none"></button>
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary" onclick="$('#scheduleSubmit').click();">Save changes</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+						</div>
                    <div class="tab-pane fade" id="nav-ecommerce" role="tabpanel" aria-labelledby="nav-ecommerce-tab">
 						<div id="showEcommercesDiv">
 							<button id="showEcommerceUserForm" style="margin: 0.25em;" type="button" class="btn btn-info float-left" onclick="showEcommerceUserModal()">
@@ -615,6 +654,13 @@
                 $('#employee-skills').val(employeeSkills ? employeeSkills : '');
                 $('#employee-name').val(employeeName ? employeeName : '');
                 $('#employeeModal').modal('show');
+            }
+            // For opening the employee modal
+            function showEmployeeScheduleModal(employeeId, schedule, employeeName) {
+                $('#employee-id').val(employeeId ? employeeId : '');
+                $('#employee-schedule').val(schedule ? schedule : '');
+                $('#employee-name').val(employeeName ? employeeName : '');
+                $('#employeeScheduleModal').modal('show');
             }
             // For opening the ecommerce user modal
             function showEcommerceUserModal(ecommerceId, ecommerceUsername, ecommercePassword) {
