--- a/cloudinterface/src/main/resources/templates/home.html
+++ b/cloudinterface/src/main/resources/templates/home.html
@@ -275,8 +275,8 @@
 							<button id="showEmployeeScheduleForm" style="margin: 0.25em;" type="button" class="btn btn-info float-left" onclick="showEmployeeScheduleModal()">
 								+ Add Employee schedule
 							</button>
-							<button id="showPetScheduleForm" style="margin: 0.25em;" type="button" class="btn btn-info float-left" onclick="showPetScheduleModal()">
-								+ Add Pet Schedule
+							<button id="showAssignScheduleForm" style="margin: 0.25em;" type="button" class="btn btn-info float-left" onclick="showAssignScheduleModal()">
+								+ Assign Schedule
 							</button>
 						</div>
                         <div class="table-responsive">
@@ -511,6 +511,52 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="modal fade" id="assignScheduleModal" tabindex="-1" role="dialog" aria-labelledby="assignScheduleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="assignSheduleModalLabel">Assign schedule</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form  th:object="${newSchedule}" th:action="@{/pet/assignSchedule}" action="#" method="POST">
+											<div class="form-group blu-margin">
+												<label for="schedule-employee" class="col-form-label">Employess</label>
+												<select class="form-control" th:field="*{employeeIds}">
+												<option value="0" selected>Select employee</option>
+												<option th:each="employee : ${employees}" th:value="${employee.employeeId}" th:text="${employee.employeeId} + ', ' +  ${employee.employeeName}"></option>
+												</select>
+											</div>
+											<div class="form-group blu-margin">
+												<label for="schedule-pet" class="col-form-label">Pets</label>
+												<select class="form-control" th:field="*{petIds}">
+												<option value="0" selected>Select pet</option>
+												<option th:each="pet : ${pets}" th:value="${pet.petId}" th:text="${pet.petId} + ', ' +  ${pet.petName}"></option>
+												</select>
+											</div>
+                                            <div class="form-group">
+                                                <label for="schedule-date" class="col-form-label">Date (2021-11-22 format)</label>
+                                               <input th:field="*{date}" type="text" name="scheduleDate" class="form-control" id="schedule-date" maxlength="50" required>
+                                            </div>
+											<div class="form-group blu-margin">
+												<label for="schedule-skill" class="col-form-label">Skills</label>
+												<select class="form-control" th:field="*{activities}">
+												<option value="0" selected>Select skill</option>
+												<option th:each="skill : ${skills}" th:value="${skill}" th:text="${skill}"></option>
+												</select>
+											</div>
+                                            <button id="assignScheduleSubmit" type="submit" class="d-none"></button>
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary" onclick="$('#assignScheduleSubmit').click();">Save changes</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 						</div>
                    <div class="tab-pane fade" id="nav-ecommerce" role="tabpanel" aria-labelledby="nav-ecommerce-tab">
 						<div id="showEcommercesDiv">
@@ -655,12 +701,20 @@
                 $('#employee-name').val(employeeName ? employeeName : '');
                 $('#employeeModal').modal('show');
             }
-            // For opening the employee modal
+            // For opening the employee schedule modal
             function showEmployeeScheduleModal(employeeId, schedule, employeeName) {
                 $('#employee-id').val(employeeId ? employeeId : '');
                 $('#employee-schedule').val(schedule ? schedule : '');
                 $('#employee-name').val(employeeName ? employeeName : '');
                 $('#employeeScheduleModal').modal('show');
+            }
+            // For opening the assign schedule modal
+            function showAssignScheduleModal(scheduleEmployee, schedulePet, scheduleDate, scheduleSkill) {
+                $('#schedule-employee').val(scheduleEmployee ? scheduleEmployee : '');
+                $('#schedule-pet').val(schedulePet ? schedulePet : '');
+                $('#schedule-date').val(schedulePet ? schedulePet : '');
+                $('#schedule-skill').val(scheduleSkill ? scheduleSkill : '');
+                $('#assignScheduleModal').modal('show');
             }
             // For opening the ecommerce user modal
             function showEcommerceUserModal(ecommerceId, ecommerceUsername, ecommercePassword) {
