--- a/cloudinterface/src/main/resources/templates/home.html
+++ b/cloudinterface/src/main/resources/templates/home.html
@@ -637,7 +637,39 @@
                                 </div>
                             </div>
                         </div>
-
+                        <div class="modal fade" id="ecommerceItemModal" tabindex="-1" role="dialog" aria-labelledby="ecommerceItemModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="ecommerceItemModalLabel">Define item</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form th:object="${newEcommerceItem}" th:action="@{/ecommerce/addItem}" action="#" method="POST">
+                                            <div class="form-group">
+                                                <label for="ecommerce-itemName" class="col-form-label">Name</label>
+                                            	<input th:field="*{name}" type="text" name= "ecommerceItemName" class="form-control" id="ecommerce-itemName" maxlength="20" required>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="ecommerce-itemPrice" class="col-form-label">Price</label>
+                                                <input th:field="*{price}" type="text" name= "ecommerceItemPrice" class="form-control" id="ecommerce-itemPrice" maxlength="20" required>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="ecommerce-itemDescription" class="col-form-label">Description</label>
+                                                <input th:field="*{description}" type="text" name= "ecommerceItemDescription" class="form-control" id="ecommerce-itemDescription" maxlength="20" required>
+                                            </div>
+											<button id="ecommerceItemSubmit" type="submit" class="d-none"></button>
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary" onclick="$('#ecommerceItemSubmit').click();">Save changes</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="modal fade" id="ecommerceOrderModal" tabindex="-1" role="dialog" aria-labelledby="ecommerceOrderModalLabel" aria-hidden="true">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
@@ -749,6 +781,14 @@
                 $('#ecommerce-username').val(ecommerceUsername ? ecommerceUsername : '');
                 $('#ecommerce-password').val(ecommercePassword ? ecommercePassword : '');
                 $('#ecommerceUserModal').modal('show');
+            }
+            // For opening the ecommerce item modal
+            function showEcommerceItemModal(ecommerceItemId, ecommerceItemName, ecommerceItemPrice, ecommerceItemDescription) {
+                $('#ecommerce-itemid').val(ecommerceItemId ? ecommerceItemId : '');
+                $('#ecommerce-itemName').val(ecommerceItemName ? ecommerceItemName : '');
+                $('#ecommerce-itemPrice').val(ecommerceItemPrice ? ecommerceItemPrice : '');
+                $('#ecommerce-itemDescription').val(ecommerceItemDescription ? ecommerceItemDescription : '');
+                $('#ecommerceItemModal').modal('show');
             }
             // For opening the ecommerce order modal
             function showEcommerceOrderModal(ecommerceOrderId, ecommerceOrderUsername, ecommerceItemId, ecommerceQuantity) {
