--- a/cloudinterface/src/main/resources/templates/home.html
+++ b/cloudinterface/src/main/resources/templates/home.html
@@ -608,6 +608,29 @@
                                </h2>
                             </div>
                         </div>
+                        <div class="table-responsive" th:if="${ecommerceItems}">
+                            <table class="table table-striped" id="userTable">
+                                <thead>
+                                    <tr>
+                                        <th style="width: 5%" scope="col"></th>
+                                        <th style="width: 5%" scope="col">Id</th>
+                                        <th style="width: 30%" scope="col">Name</th>
+                                        <th style="width: 30%" scope="col">Price</th>
+                                        <th style="width: 30%" scope="col">Description</th>
+										</tr>
+                                </thead>
+                                <tbody th:each="item: ${ecommerceItems}">
+                                    <tr>									
+                                        <td>							
+										</td>
+                                        <th th:text="${item.itemId}" scope="row">Example Item Id</th>
+                                        <td th:text="${item.itemName}">Example Item Name </td>
+                                        <td th:text="${item.itemPrice}">Example Item Price </td>
+                                        <td th:text="${item.itemDescription}">Example Item Description </td>
+									</tr>
+                                </tbody>
+                            </table>
+                        </div>
                         <div class="modal fade" id="ecommerceUserModal" tabindex="-1" role="dialog" aria-labelledby="ecommerceUserModalLabel" aria-hidden="true">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
